# pretix-seatingsale

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
pretix_seatingsale/: apps.py  forms.py  signals.py  urls.py  views.py
pretix_seatingsale/locale/de/LC_MESSAGES/: django.po
pretix_seatingsale/static/pretix_seatingsale/: seatingsale.css  seatingsale.js
pretix_seatingsale/templates/pretix_seatingsale/control/: assign.html  delete.html  edit.html  import.html  list.html
pretix_seatingsale/templates/pretixpresale/event/: seatingsale_map.html
