[project]
name = "pretix-seatingsale"
dynamic = ["version"]
description = "Interactive seat selection in the shop for self-hosted pretix."
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Max Herklotz"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_seatingsale = "pretix_seatingsale:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = ["setuptools", "pretix-plugin-build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_seatingsale.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
